IataMessageProcessor/Parsers/Antlr/Fhl5/fhl5Parser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.10.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from fhl5.g4 by ANTLR 4.10.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.10.1")]
[System.CLSCompliant(false)]
public partial class fhl5Parser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, LineIdentifierSsr=3, LineIdentifierOsi=4, LineIdentifierUld=5, 
		HbsLineIdentifier=6, ShpLineIdentifier=7, CneLineIdentifier=8, NamIdentifier=9, 
		AdrIdentifier=10, LocIdentifier=11, HarmonisedCommodityCodeIdentifier=12, 
		SeparatorSlant=13, SeparatorHyphen=14, A=15, N=16, G=17, SeparatorCrlf=18;
	public const int
		RULE_fhl5 = 0, RULE_standardMessageIdentification = 1, RULE_masterAwbConsignmentDetail = 2, 
		RULE_houseWaybills = 3, RULE_shipperNameAndAddress = 4, RULE_consigneeNameAndAddress = 5, 
		RULE_chargeDeclarations = 6, RULE_houseWaybillSummaryDetails = 7, RULE_freeTextDescriptionOfGoods = 8, 
		RULE_harmonisedTariffScheduleInformation = 9, RULE_otherCustSecurityAndRegulatCtrlInfo = 10, 
		RULE_masterAwbIdentification = 11, RULE_awbOriginAndDestination = 12, 
		RULE_houseWaybillOriginAndDestination = 13, RULE_houseWaybillTotals = 14, 
		RULE_freeTextDescriptions = 15, RULE_harmonisedTariffs = 16, RULE_quantityDetail = 17, 
		RULE_natureOfGoods = 18, RULE_shrs = 19, RULE_name = 20, RULE_nameDetail = 21, 
		RULE_location = 22, RULE_stateProvince = 23, RULE_codedLocation = 24, 
		RULE_postCode = 25, RULE_contactDetail = 26, RULE_streetAddress = 27, 
		RULE_streetAddressDetail = 28, RULE_valueForCarriageDeclaration = 29, 
		RULE_valueForCustomsDeclaration = 30, RULE_valueForInsuranceDeclaration = 31, 
		RULE_specialHandlingRequirements = 32, RULE_prepaidCollectChargeDeclarations = 33, 
		RULE_otherCustSecurityAndRegulatCtrlInfoDet = 34, RULE_standardMessageIdentifier = 35, 
		RULE_messageTypeVersionNumber = 36, RULE_lineIdentifier = 37, RULE_hwbSerialNumber = 38, 
		RULE_airlinePrefix = 39, RULE_awbSerialNumber = 40, RULE_airportCodeOfOrigin = 41, 
		RULE_airportCodeOfDestitation = 42, RULE_slac = 43, RULE_shipmentDescriptionCode = 44, 
		RULE_isoCurrencyCode = 45, RULE_pcIndOtherCharges = 46, RULE_contactIdentifier = 47, 
		RULE_contactNumber = 48, RULE_pcIndWeightValuation = 49, RULE_declaredValueForCarriage = 50, 
		RULE_declaredValueForCustoms = 51, RULE_amountOfInsurance = 52, RULE_noValue = 53, 
		RULE_weightCode = 54, RULE_weight = 55, RULE_numberOfPieces = 56, RULE_specialHandlingCode = 57, 
		RULE_isoCountryCode = 58, RULE_informationIdentifier = 59, RULE_custSecurityAndRegulatCtrlInfoId = 60, 
		RULE_harmonisedCommodityCode = 61, RULE_freeText = 62, RULE_nameInner = 63, 
		RULE_supplemCustSecurityAndRegulatCtrlInfo = 64, RULE_manifestDescriptionOfGoods = 65, 
		RULE_streetAddressInner = 66, RULE_placeInner = 67, RULE_postCodeInner = 68, 
		RULE_stateProvinceInner = 69;
	public static readonly string[] ruleNames = {
		"fhl5", "standardMessageIdentification", "masterAwbConsignmentDetail", 
		"houseWaybills", "shipperNameAndAddress", "consigneeNameAndAddress", "chargeDeclarations", 
		"houseWaybillSummaryDetails", "freeTextDescriptionOfGoods", "harmonisedTariffScheduleInformation", 
		"otherCustSecurityAndRegulatCtrlInfo", "masterAwbIdentification", "awbOriginAndDestination", 
		"houseWaybillOriginAndDestination", "houseWaybillTotals", "freeTextDescriptions", 
		"harmonisedTariffs", "quantityDetail", "natureOfGoods", "shrs", "name", 
		"nameDetail", "location", "stateProvince", "codedLocation", "postCode", 
		"contactDetail", "streetAddress", "streetAddressDetail", "valueForCarriageDeclaration", 
		"valueForCustomsDeclaration", "valueForInsuranceDeclaration", "specialHandlingRequirements", 
		"prepaidCollectChargeDeclarations", "otherCustSecurityAndRegulatCtrlInfoDet", 
		"standardMessageIdentifier", "messageTypeVersionNumber", "lineIdentifier", 
		"hwbSerialNumber", "airlinePrefix", "awbSerialNumber", "airportCodeOfOrigin", 
		"airportCodeOfDestitation", "slac", "shipmentDescriptionCode", "isoCurrencyCode", 
		"pcIndOtherCharges", "contactIdentifier", "contactNumber", "pcIndWeightValuation", 
		"declaredValueForCarriage", "declaredValueForCustoms", "amountOfInsurance", 
		"noValue", "weightCode", "weight", "numberOfPieces", "specialHandlingCode", 
		"isoCountryCode", "informationIdentifier", "custSecurityAndRegulatCtrlInfoId", 
		"harmonisedCommodityCode", "freeText", "nameInner", "supplemCustSecurityAndRegulatCtrlInfo", 
		"manifestDescriptionOfGoods", "streetAddressInner", "placeInner", "postCodeInner", 
		"stateProvinceInner"
	};

	private static readonly string[] _LiteralNames = {
		null, "'.'", "','", "'SSR/'", "'OSI/'", "'ULD/'", "'HBS/'", null, null, 
		"'NAM'", "'ADR'", "'LOC'", "'/NH/'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, "LineIdentifierSsr", "LineIdentifierOsi", "LineIdentifierUld", 
		"HbsLineIdentifier", "ShpLineIdentifier", "CneLineIdentifier", "NamIdentifier", 
		"AdrIdentifier", "LocIdentifier", "HarmonisedCommodityCodeIdentifier", 
		"SeparatorSlant", "SeparatorHyphen", "A", "N", "G", "SeparatorCrlf"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "fhl5.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static fhl5Parser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public fhl5Parser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public fhl5Parser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class Fhl5Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StandardMessageIdentificationContext standardMessageIdentification() {
			return GetRuleContext<StandardMessageIdentificationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MasterAwbConsignmentDetailContext masterAwbConsignmentDetail() {
			return GetRuleContext<MasterAwbConsignmentDetailContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public HouseWaybillsContext[] houseWaybills() {
			return GetRuleContexts<HouseWaybillsContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public HouseWaybillsContext houseWaybills(int i) {
			return GetRuleContext<HouseWaybillsContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ShipperNameAndAddressContext shipperNameAndAddress() {
			return GetRuleContext<ShipperNameAndAddressContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConsigneeNameAndAddressContext consigneeNameAndAddress() {
			return GetRuleContext<ConsigneeNameAndAddressContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ChargeDeclarationsContext chargeDeclarations() {
			return GetRuleContext<ChargeDeclarationsContext>(0);
		}
		public Fhl5Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fhl5; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifhl5Visitor<TResult> typedVisitor = visitor as Ifhl5Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFhl5(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Fhl5Context fhl5() {
		Fhl5Context _localctx = new Fhl5Context(Context, State);
		EnterRule(_localctx, 0, RULE_fhl5);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 140;
			standardMessageIdentification();
			State = 141;
			masterAwbConsignmentDetail();
			State = 143;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 142;
				houseWaybills();
				}
				}
				State = 145;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==HbsLineIdentifier );
			State = 148;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ShpLineIdentifier) {
				{
				State = 147;
				shipperNameAndAddress();
				}
			}

			State = 151;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==CneLineIdentifier) {
				{
				State = 150;
				consigneeNameAndAddress();
				}
			}

			State = 154;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==A) {
				{
				State = 153;
				chargeDeclarations();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StandardMessageIdentificationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StandardMessageIdentifierContext standardMessageIdentifier() {
			return GetRuleContext<StandardMessageIdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorSlant() { return GetToken(fhl5Parser.SeparatorSlant, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public MessageTypeVersionNumberContext messageTypeVersionNumber() {
			return GetRuleContext<MessageTypeVersionNumberContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorCrlf() { return GetToken(fhl5Parser.SeparatorCrlf, 0); }
		public StandardMessageIdentificationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_standardMessageIdentification; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifhl5Visitor<TResult> typedVisitor = visitor as Ifhl5Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStandardMessageIdentification(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StandardMessageIdentificationContext standardMessageIdentification() {
		StandardMessageIdentificationContext _localctx = new StandardMessageIdentificationContext(Context, State);
		EnterRule(_localctx, 2, RULE_standardMessageIdentification);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 156;
			standardMessageIdentifier();
			State = 157;
			Match(SeparatorSlant);
			State = 158;
			messageTypeVersionNumber();
			State = 159;
			Match(SeparatorCrlf);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MasterAwbConsignmentDetailContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LineIdentifierContext lineIdentifier() {
			return GetRuleContext<LineIdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorSlant() { return GetToken(fhl5Parser.SeparatorSlant, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public MasterAwbIdentificationContext masterAwbIdentification() {
			return GetRuleContext<MasterAwbIdentificationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AwbOriginAndDestinationContext awbOriginAndDestination() {
			return GetRuleContext<AwbOriginAndDestinationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public QuantityDetailContext quantityDetail() {
			return GetRuleContext<QuantityDetailContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorCrlf() { return GetToken(fhl5Parser.SeparatorCrlf, 0); }
		public MasterAwbConsignmentDetailContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_masterAwbConsignmentDetail; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifhl5Visitor<TResult> typedVisitor = visitor as Ifhl5Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMasterAwbConsignmentDetail(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MasterAwbConsignmentDetailContext masterAwbConsignmentDetail() {
		MasterAwbConsignmentDetailContext _localctx = new MasterAwbConsignmentDetailContext(Context, State);
		EnterRule(_localctx, 4, RULE_masterAwbConsignmentDetail);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 161;
			lineIdentifier();
			State = 162;
			Match(SeparatorSlant);
			State = 163;
			masterAwbIdentification();
			State = 164;
			awbOriginAndDestination();
			State = 165;
			quantityDetail();
			State = 166;
			Match(SeparatorCrlf);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HouseWaybillsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public HouseWaybillSummaryDetailsContext[] houseWaybillSummaryDetails() {
			return GetRuleContexts<HouseWaybillSummaryDetailsContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public HouseWaybillSummaryDetailsContext houseWaybillSummaryDetails(int i) {
			return GetRuleContext<HouseWaybillSummaryDetailsContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FreeTextDescriptionOfGoodsContext freeTextDescriptionOfGoods() {
			return GetRuleContext<FreeTextDescriptionOfGoodsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public HarmonisedTariffScheduleInformationContext harmonisedTariffScheduleInformation() {
			return GetRuleContext<HarmonisedTariffScheduleInformationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OtherCustSecurityAndRegulatCtrlInfoContext otherCustSecurityAndRegulatCtrlInfo() {
			return GetRuleContext<OtherCustSecurityAndRegulatCtrlInfoContext>(0);
		}
		public HouseWaybillsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_houseWaybills; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifhl5Visitor<TResult> typedVisitor = visitor as Ifhl5Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitHouseWaybills(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public HouseWaybillsContext houseWaybills() {
		HouseWaybillsContext _localctx = new HouseWaybillsContext(Context, State);
		EnterRule(_localctx, 6, RULE_houseWaybills);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 169;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 168;
					houseWaybillSummaryDetails();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 171;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			State = 174;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				{
				State = 173;
				freeTextDescriptionOfGoods();
				}
				break;
			}
			State = 177;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				{
				State = 176;
				harmonisedTariffScheduleInformation();
				}
				break;
			}
			State = 180;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				{
				State = 179;
				otherCustSecurityAndRegulatCtrlInfo();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ShipperNameAndAddressContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ShpLineIdentifier() { return GetToken(fhl5Parser.ShpLineIdentifier, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public NameContext name() {
			return GetRuleContext<NameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StreetAddressContext streetAddress() {
			return GetRuleContext<StreetAddressContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LocationContext location() {
			return GetRuleContext<LocationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CodedLocationContext codedLocation() {
			return GetRuleContext<CodedLocationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorCrlf() { return GetToken(fhl5Parser.SeparatorCrlf, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ContactDetailContext[] contactDetail() {
			return GetRuleContexts<ContactDetailContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ContactDetailContext contactDetail(int i) {
			return GetRuleContext<ContactDetailContext>(i);
		}
		public ShipperNameAndAddressContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_shipperNameAndAddress; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifhl5Visitor<TResult> typedVisitor = visitor as Ifhl5Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitShipperNameAndAddress(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ShipperNameAndAddressContext shipperNameAndAddress() {
		ShipperNameAndAddressContext _localctx = new ShipperNameAndAddressContext(Context, State);
		EnterRule(_localctx, 8, RULE_shipperNameAndAddress);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 182;
			Match(ShpLineIdentifier);
			State = 183;
			name();
			State = 184;
			streetAddress();
			State = 185;
			location();
			State = 186;
			codedLocation();
			State = 190;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==SeparatorSlant) {
				{
				{
				State = 187;
				contactDetail();
				}
				}
				State = 192;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 193;
			Match(SeparatorCrlf);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConsigneeNameAndAddressContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CneLineIdentifier() { return GetToken(fhl5Parser.CneLineIdentifier, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public NameContext name() {
			return GetRuleContext<NameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StreetAddressContext streetAddress() {
			return GetRuleContext<StreetAddressContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LocationContext location() {
			return GetRuleContext<LocationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CodedLocationContext codedLocation() {
			return GetRuleContext<CodedLocationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorCrlf() { return GetToken(fhl5Parser.SeparatorCrlf, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ContactDetailContext[] contactDetail() {
			return GetRuleContexts<ContactDetailContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ContactDetailContext contactDetail(int i) {
			return GetRuleContext<ContactDetailContext>(i);
		}
		public ConsigneeNameAndAddressContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_consigneeNameAndAddress; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifhl5Visitor<TResult> typedVisitor = visitor as Ifhl5Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConsigneeNameAndAddress(this);
			else return visitor.VisitChildren(this);
		}
	}
